# gamma-spectrometer

./: .gitignore  CLAUDE.md  README.en.md  README.md  bom_fp_work.md
docs/: ad4084_dpp_design.md  adc_mcu_board.md  atomspectra_spectrogram_format.md  audit_pass3_findings.md  cheatsheet_mistakes.md  divider_board.md  divider_rework.md  hv_board_schematic.md  reference_spectra.md  session_context.md  usb_power_board.md  usb_power_board_schematic.md
docs/en/: README.md  firmware.md  hardware.md  protocol.md  simulations.md
docs/refs/: AO3415_text.txt  ATB322524_text.txt  BAS516_text.txt  BAV23S_text.txt  BZT52C18VS_text.txt  IRLML0040_text.txt  max1847_text.txt  spec2_text.txt  zadacha_06.doc
docs/ru/: README.md  firmware.md  hardware.md  protocol.md  simulations.md
firmware/: README.md  stage1_first_spectrum.xml
firmware/core/: app.c  app.h  dsp.c  dsp.h  pulsegen.c  pulsegen.h  selftest.c
firmware/gamma_stage1/: .cproject  .project  gamma_stage1.ioc
firmware/gamma_stage1/Core/Inc/: app.h  dsp.h  invcdf_ra.h  pulsegen.h  selftest.h  shproto.h  spectrum.h  stm32g4xx_hal_conf.h
firmware/gamma_stage1/Core/Src/: app.c  cal_store.c  dsp.c  main.c  pulsegen.c  shproto.c  spectrum.c  stage2_hw.c  stm32g4xx_it.c
firmware/nucleo_stage1/: main_glue.c
firmware/tools/: becqmoni_sim.py  flash_stage1.cmd
host/: CMakeLists.txt  README.md
host/design_handoff_gamma_spectrometer_console/: README.md  app.jsx  gamma.css  plots.jsx  window.jsx  ГаммаПульт - дизайн-спека.html
host/shproto/: __init__.py  alert.py  dispatcher.py  main.py  port.py
host/src/: cli.cpp  device.cpp  device.h  entry.cpp  host_app.h  main.cpp  probe.cpp  serial_win.cpp  serial_win.h  shproto.cpp  shproto.h  theme.cpp  theme.h
pcb/: HV_Board.txt  divider_board.txt  gamma_spectrometer.net  gen_projects.py  mcu_board.txt  usb_power_board.txt
pcb/gamma_spectrometer/: #auto_saved_files#  divider_board.kicad_sch  fp-lib-table  gamma_spectrometer.csv  gamma_spectrometer.kicad_pcb  gamma_spectrometer.kicad_prl  gamma_spectrometer.kicad_pro  gamma_spectrometer.kicad_sch  hv_board.kicad_sch  mcu_board.kicad_sch  sym-lib-table  usb_power_board.kicad_sch
pcb/gamma_spectrometer/посадочные места.pretty/: 21-0055H_16_MXM-M.kicad_mod  CHOKE_524-0110-T000_TDK-M.kicad_mod  CONN_DX07S024WJ3R400_JAE.kicad_mod  INTERCONNECT_PIN_D1.5.kicad_mod  J_PMT401_R1307-01.kicad_mod  RD_8_1_ADI-M.kicad_mod  SOIC-8_5P28X5P28_WIN-M.kicad_mod  STANDOFF_M2.5_GND.kicad_mod  STANDOFF_M2.5_GND_x3_TRIANGLE.kicad_mod
pcb/lib/ul_AD8000YRDZ-REEL/KiCADv6/: 2026-05-19_23-51-37.kicad_sym
pcb/lib/ul_AD8000YRDZ-REEL/KiCADv6/footprints.pretty/: RD_8_1_ADI-L.kicad_mod  RD_8_1_ADI-M.kicad_mod  RD_8_1_ADI.kicad_mod
pcb/lib/ul_ATB322524-0110-T000/KiCADv6/: 2026-05-16_21-03-18.kicad_sym
pcb/lib/ul_ATB322524-0110-T000/KiCADv6/footprints.pretty/: CHOKE_524-0110-T000_TDK-L.kicad_mod  CHOKE_524-0110-T000_TDK-M.kicad_mod  CHOKE_524-0110-T000_TDK.kicad_mod
pcb/lib/ul_BAV23S/KiCADv6/: 2026-05-16_22-19-17.kicad_sym
pcb/lib/ul_BAV23S/KiCADv6/footprints.pretty/: SOT-23_TO-236_318-AT_OSI-L.kicad_mod  SOT-23_TO-236_318-AT_OSI-M.kicad_mod  SOT-23_TO-236_318-AT_OSI.kicad_mod
pcb/lib/ul_BZT52C18-7-F/KiCADv6/: 2026-05-16_20-52-59.kicad_sym
pcb/lib/ul_BZT52C18-7-F/KiCADv6/footprints.pretty/: SOD123_DIO-L.kicad_mod  SOD123_DIO-M.kicad_mod  SOD123_DIO.kicad_mod
pcb/lib/ul_DX07S024WJ3R400/KiCADv6/: 2026-05-15_21-46-10.kicad_sym
pcb/lib/ul_DX07S024WJ3R400/KiCADv6/footprints.pretty/: CONN_DX07S024WJ3R400_JAE.kicad_mod
pcb/lib/ul_MCP6002-E-SN/KiCADv6/: 2026-05-17_21-59-28.kicad_sym
pcb/lib/ul_MCP6002-E-SN/KiCADv6/footprints.pretty/: SOIC8-N_MC_MCH-L.kicad_mod  SOIC8-N_MC_MCH-M.kicad_mod  SOIC8-N_MC_MCH.kicad_mod
pcb/lib/ul_max1847eee-/KiCADv6/: 2026-05-16_20-17-09.kicad_sym
pcb/lib/ul_max1847eee-/KiCADv6/footprints.pretty/: 21-0055H_16_MXM-L.kicad_mod  21-0055H_16_MXM-M.kicad_mod  21-0055H_16_MXM.kicad_mod
review/: ENV.md  REVIEW.md  TRIAGE_round2.md  TRIAGE_round3.md
review/sim/: check_aliasing.py  check_sampling.py  detector_calcs.py  divider_load.cir  divider_passive.cir  sh_ballistic.cir  sh_gbw.cir  sh_pulse.cir
simulation/: sim1_ad8000.cir  sim2_shaper.cir  sim3_noise.cir  sim_buffer_bias.cir  sim_div_final.cir  sim_divider_complete.cir  sim_tia.cir  sim_tia_real.cir  sim_tia_stab.cir
simulation/accept/: c1_README.md  c1_bench.cir  c1_check.py  c2_README.md  c2a_bench.cir  c2b_bench.cir  dut_divider.cir  dut_shaper.cir
simulation/models/: opamp_g474.sub  opamp_g474_noise.sub
simulation/scripts/: analyze_sim1.py  analyze_sim2.py  analyze_sim3.py
